src/test/ui/rfc1598-generic-associated-types/parameter_number_and_kind.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/parameter_number_and_kind.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:11:12
   |
LL |     type A<'a>;
   |           -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'b` never used
  --> $DIR/parameter_number_and_kind.rs:12:16
   |
LL |     type B<'a, 'b>;
   |              --^^
   |              |
   |              help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:12:12
   |
LL |     type B<'a, 'b>;
   |            ^^--
   |            |
   |            help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:15:12
   |
LL |     type E<'a, T>;
   |            ^^--
   |            |
   |            help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:31:12
   |
LL |     type B<'a, T> = Vec<T>; // Error: lifetime param expected
   |            ^^--
   |            |
   |            help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:32:12
   |
LL |     type C<'a> = u32; // Error: no param expected
   |           -^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:33:12
   |
LL |     type D<'a> = u32; // Error: type param expected
   |           -^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:41:12
   |
LL |     type B<'a> = u32; // Error: another lifetime param expected
   |           -^^- help: elide the unused lifetime

warning: lifetime parameter `'b` never used
  --> $DIR/parameter_number_and_kind.rs:43:12
   |
LL |     type D<'b, T> = u32; // Error: unexpected lifetime param
   |            ^^--
   |            |
   |            help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/parameter_number_and_kind.rs:44:12
   |
LL |     type E<'a, 'b> = u32; // Error: type expected as the second param
   |            ^^--
   |            |
   |            help: elide the unused lifetime

warning: lifetime parameter `'b` never used
  --> $DIR/parameter_number_and_kind.rs:44:16
   |
LL |     type E<'a, 'b> = u32; // Error: type expected as the second param
   |              --^^
   |              |
   |              help: elide the unused lifetime

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:17:27
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |                           ^^^^^^^ lifetime argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:17:36
   |
LL |     type FOk<T> = Self::E<'static, T>;
   |                                    ^ type argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:20:26
   |
LL |     type FErr1 = Self::E<'static, 'static>; // Error
   |                          ^^^^^^^ lifetime argument not allowed

error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:22:29
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>; // Error
   |                             ^^^^^^^ lifetime argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/parameter_number_and_kind.rs:22:38
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>; // Error
   |                                      ^ type argument not allowed

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0109`.
